--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/comment/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/comment/list.html
@@ -110,7 +110,7 @@ if(len>0){
 <div class="col-lg-6">
 	<dl class="dl-horizontal">
 		<dt>栏目名称：</dt>
-		<dd>{{d.noddName||''}}</dd>
+		<dd>{{d.nodeName||''}}</dd>
 		<dt>状　　态：</dt>
 		<dd>
 			{{# if(record.enabled===1){ }}
