--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/info/infoList.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/info/infoList.html
@@ -57,7 +57,7 @@
             }
         }
     }, {
-        "data" : "noddName"
+        "data" : "nodeName"
     }, {
         "data" : "title"
     }, {
