--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/collect/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/collect/list.html
@@ -77,7 +77,7 @@ if(len>0){
 		{{# } }}
 	</td>
 	<td>{{record.collectName}}</td>
-	<td class="text-success">{{record.noddName}}</td>
+	<td class="text-success">{{record.nodeName}}</td>
 	<td>
 		<a href="{{editUrlPre+record.id}}.gsp" data-target="#commonWin" class="btn btn-primary btn-xs" type="button" data-toggle="modal"><i class="fa fa-edit"></i>&nbsp;修改</a>
 		<button class="btn btn-warning btn-xs" type="button" onclick="myTable.deleteItem('{{record.id}}')"><i class="fa fa-trash-o"></i>&nbsp;删除</button>
