--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/add.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/add.html
@@ -10,7 +10,7 @@
 				<div class="form-group">
 					<label class="col-xs-2 control-label"><label class="text-danger">*</label> 栏目名称： </label>
 					<div class="col-xs-3">
-						<input name="noddName" placeholder="请输入栏目名称" type="text" class="form-control " />
+						<input name="nodeName" placeholder="请输入栏目名称" type="text" class="form-control " />
 					</div>
 					<label class="col-xs-2 control-label"><label class="text-danger">*</label> 栏目代码： </label>
 					<div class="col-xs-3">
@@ -92,7 +92,7 @@
     /*<![CDATA[*/
     $(function() {
         var rules = {
-            noddName : {
+            nodeName : {
                 required : true,
                 maxlength : 20
             },
