--- a/tg-cms/src/main/webapp/template/default/fragments/friendlink.html
+++ b/tg-cms/src/main/webapp/template/default/fragments/friendlink.html
@@ -1,5 +1,5 @@
 <!--/*******友情链接*******/-->
-<tr tg_cms:frendlink="friendlink" class="gradeX">
+<tr tg_cms:frendlink_list="friendlink" class="gradeX">
 	<td th:text="${itemStat.index+1}">1</td>
 	<td th:text="${friendlink.typeName}" class="text-success">类型</td>
 	<td><span th:text="${friendlink.flName}" class="label label-primary">网站名称</span></td>
