--- a/tg-cms/src/main/webapp/template/default/about.html
+++ b/tg-cms/src/main/webapp/template/default/about.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<div th:replace="default/fragments/nav">head</div>
+		<div th:replace="default/fragments/nav::nav(nodeCodeNum=about)">head</div>
 		<div class="container banner">
 			<section class="title-section">
 				<ul class="breadcrumb breadcrumb__t">
