--- a/tg-cms/src/main/webapp/template/default/fragments/nav.html
+++ b/tg-cms/src/main/webapp/template/default/fragments/nav.html
@@ -1,5 +1,5 @@
 <!--/*******导航栏*******/-->
-<div class="header">
+<div class="header" th:fragment="nav(nodeCodeNum)">
 	<div class="container header_top">
 		<div class="logo">
 			<a th:href="@{/index.htm}"><img th:src="@{/template/default/_resources/images/logo.png}" /></a>
@@ -7,7 +7,7 @@
 		<div class="menu">
 			<a class="toggleMenu" th:href="@{/index.htm}"><img th:src="@{/template/default/_resources/images/nav_icon.png}" alt="" /> </a>
 			<ul class="nav" id="nav">
-				<li tg_cms:node_list="node"><a href="" th:text="${node.nodeName}">首页</a></li>
+				<li tg_cms:node_list="node" th:classappend="${node.codeNum==nodeCodeNum} ? 'current'"><a th:href="@{/{nodeLink}(nodeLink=${node.nodeLink})}" th:text="${node.nodeName}">首页</a></li>
 			</ul>
 		</div>
 	</div>
