--- a/tg-cms/src/main/webapp/template/default/contact.html
+++ b/tg-cms/src/main/webapp/template/default/contact.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<div th:replace="default/fragments/nav">head</div>
+		<div th:replace="default/fragments/nav::nav(nodeCodeNum=contact)">head</div>
 		<div class="container banner">
 			<section class="title-section">
 				<ul class="breadcrumb breadcrumb__t">
@@ -30,7 +30,7 @@
 										<div class="clearfix"></div></li>
 									<li><i class="phone"></i>
 										<p>
-											联系电话: 187-0143-2797<br />
+											联系电话: 010-89942808<br />
 										</p>
 										<div class="clearfix"></div></li>
 									<li><i class="msg"></i>
