--- a/tg-cms/src/main/webapp/template/default/services.html
+++ b/tg-cms/src/main/webapp/template/default/services.html
@@ -19,20 +19,13 @@
 			<div class='container content_middle'>
 				<div class="row">
 					<div class="col-md-8 middle_left">
-					    <li tg_cms:node_list="node">
-					    
-					        <a href="" th:text="${node.nodeName}">首页</a>
-					    </li>
-					
-					
-					
-						<ul class="test_box middle_grid" tg_cms:node_list="dtservice,services">
-							<li class="test_img">   </li>
+						<ul tg_cms:info_list="service_info,services" class="test_box middle_grid">
+							<li class="test_img"></li>
 							<li class="test_desc">
 								<h4>
-									<a href="#" th:text="${dtservice.title}">全媒体内容管理发布平台</a>
+									<a href="#" th:text="${service_info.title}">全媒体内容管理发布平台</a>
 								</h4>
-								<p th:text="${dtservice.metaDescription}">图灵谷全媒体内容管理发布平台整合了图、文、音视频等媒体资源，实现了全媒体的内容管理与发布的统一平台。</p>
+								<p th:text="${service_info.metaDescription}">图灵谷全媒体内容管理发布平台整合了图、文、音视频等媒体资源，实现了全媒体的内容管理与发布的统一平台。</p>
 							</li>
 							<div class="clearfix"></div>
 						</ul>
