--- a/tg-cms/src/main/webapp/template/default/services.html
+++ b/tg-cms/src/main/webapp/template/default/services.html
@@ -20,7 +20,7 @@
 				<div class="row">
 					<div class="col-md-8 middle_left">
 						<ul tg_cms:info_list="service_info,services" class="test_box middle_grid">
-							<li class="test_img"><img tg_cms:img_path="${service_info.image}" class="img-responsive" alt="" /></li>
+							<li class="test_img"><img class="img-responsive" alt="" /></li>
 							<li class="test_desc">
 								<h4>
 									<a href="#" th:text="${service_info.title}">全媒体内容管理发布平台</a>
