--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -41,7 +41,7 @@
 		</div>
 		<div th:replace="default/fragments/footer">footer</div>
 	</div>
-	<div th:replace="default/fragments/friendlink">friendlink</div>
+	<!--/<div th:replace="default/fragments/friendlink">friendlink</div> /-->
 </body>
 <div th:replace="default/fragments/import_js">import_js</div>
 </html>
