--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -23,7 +23,20 @@
 		<div class="main">
 			<div class="container content_bottom">
 				<div class="row">
-
+                    <div class='col-md-6 comment_top'>
+                        <div class="project_grid">
+                            <h3>公司动态</h3>
+                            <ul class="project_box" tg_cms:info_list="news_info,news,3">
+                                <li class="mini-post-meta"><time datetime="">
+                                        <span class="day" th:text="${#dates.day(news_info.publishTime==null?#dates.createNow():news_info.publishTime)}">25</span><span class="month" th:text="${#dates.monthName(news_info.publishTime==null?#dates.createNow():news_info.publishTime)}">7月</span>
+                                    </time></li>
+                                <li class="desc"><h5>
+                                    </h5> <span class="comment" th:text="${news_info.title}">title</span>
+                                    <p th:text="${news_info.metaDescription}">description</p></li>
+                                <div class="clearfix"></div>
+                            </ul>
+                        </div>
+                    </div>
 					<div class='col-md-6'>
 						<ul class="comment_section top_grid">
 							<li class="comment_desc"><p>"用做产品的态度做项目，用做服务的态度做产品！"</p> <br /> <span class="m_2">- <a href="#">公司宣言</a></span></li>
