--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/login.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/login.html
@@ -41,7 +41,7 @@
 						<label for="tg_password" class="t">密 码：</label> <input id="tg_password" value="" name="tg_password" placeholder="密码" type="password" class="form-control x319 in" autocomplete="off" maxlength="25" />
 					</div>
 					<!--/* 验证码，根据系统配置是否显示 */-->
-					<div th:if="${application.openValidateCaptchaCode}" class="form-group">
+					<div th:if="${application.openValidateCaptchaCode4admin}" class="form-group">
 						<label for="tg_captchaCode" class="t">验证码：</label> <input id="tg_captchaCode" name="tg_captchaCode" type="text" class="form-control x164 in" autocomplete="off" maxlength="5" /> <img id="captchaImg" alt="点击更换" title="点击更换" th:src="@{/admin/getCaptcha.gsp}" class="m" />
 					</div>
 					<!--/*校验信息*/-->
