--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/list.html
@@ -86,7 +86,7 @@
         "data" : null,
         "class" : "text-center"
     }, {
-        "data" : "nodeName"
+        "data" : "noddName"
     }, {
         "data" : "enabled",
         render : function(data, type, row, meta) {
