--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/edit.html
@@ -11,7 +11,7 @@
 					<label class="col-xs-2 control-label">栏目名称<label class="text-danger">*</label>：
 					</label>
 					<div class="col-xs-3">
-						<input th:field="*{nodeName}" placeholder="请输入栏目名称" type="text" class="form-control" />
+						<input th:field="*{noddName}" placeholder="请输入栏目名称" type="text" class="form-control" />
 					</div>
 					<label class="col-xs-2 control-label">栏目代码<label class="text-danger">*</label>：
 					</label>
@@ -96,7 +96,7 @@
     /*<![CDATA[*/
     $(function() {
         var rules = {
-            nodeName : {
+            noddName : {
                 required : true,
                 maxlength : 20
             },
