--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/adSlot/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/adSlot/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title th:text="|#{customer.systemTitle}-图灵谷-站点管理-广告位管理|">图灵谷</title>
+<title th:text="|#{customer.systemTitle}-图灵谷-站点管理-广告位管理~|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
 <!--/***** 当前页css  start *****/-->
 <link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
