常规维护，请暂时不要更新。

--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/head_admin.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/head_admin.html
@@ -1,29 +1,19 @@
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
 <meta http-equiv="Cache-Control" content="no-siteapp" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-<meta name="renderer" content="webkit" />
-<meta name="description" content="图灵谷" />
-<meta name="author" content="图灵谷" />
-<meta name="keywords" content="图灵谷" />
+<meta charset="utf-8">
+<meta name="renderer" content="webkit">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="format-detection" content="telephone=no">
+<link rel="stylesheet" th:href="@{/resources/vendor/tgLayui/css/layui.css}" media="all">
+<link rel="stylesheet" th:href="@{/resources/css/admin/global.css}" media="all">
 <!--/* 浏览器标题栏小图标favicon */-->
 <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/imgs/common/favicon.ico}" />
-
-<!--/*bootstrap & fontawesome */-->
-<link th:href="@{/resources/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/fontawesome/css/font-awesome.min.css}" rel="stylesheet" />
-
-<!--/* tgCube */-->
-<link th:href="@{/resources/vendor/tgCube/css/libs/nanoscroller.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/tgCube/css/compiled/theme_styles.css}" rel="stylesheet" />
-
-<!--/* Toastr*/-->
-<link th:href="@{/resources/vendor/other/toastr/toastr.min.css}" rel="stylesheet" />
-
-<link th:href="@{/resources/css/common/common.css}" rel="stylesheet" />
-
-<!--/* 兼容性，部署时要修改对应的项目地址 */-->
-<!--[if lt IE 9]>
-	<script src="http://localhost:8080/tg-cms/resources/vendor/tgCube/js/html5shiv.js"></script>
-  	<script src="http://localhost:8080/tg-cms/resources/vendor/tgCube/js/respond.min.js"></script>
-<![endif]-->
+<!--/***** 当前页css  start *****/-->
+<style>
+.layui-table th {
+    text-align: center;
+}
+</style>
+<!--/***** 当前页css  end *****/-->
