--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/footer_admin.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/footer_admin.html
@@ -1,6 +1,13 @@
-<!--/*******底部版权信息等*******/-->
-<footer id="footer-bar" class="row">
-	<p id="footer-copyright" class="col-xs-12">
-		<strong>Copyright</strong> 图灵谷 &copy; 2016
-	</p>
-</footer>
+<!--/*******底部版权信息等*******
+<div class="layui-footer footer footer-demo">
+    <div class="layui-main">
+        <p>
+            2016 &copy; <a href="http://www.turingoal.com">图灵谷（北京）科技有限公司</a> 2016 &copy;
+        </p>
+    </div>
+</div>/-->
+<!--/*******手机端导航按钮*******/-->
+<div class="site-tree-mobile layui-hide">
+    <i class="layui-icon">&#xe602;</i>
+</div>
+<div class="site-mobile-shade"></div>
