--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/menu_admin.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/menu_admin.html
@@ -1,78 +1,166 @@
 <!--/*******菜单栏*******/-->
-<div th:fragment="menu(root,current)" id="nav-col">
-	<section id="col-left" class="col-left-nano">
-		<div id="col-left-inner" class="col-left-nano-content">
-			<div id="user-left-box" class="clearfix hidden-sm hidden-xs dropdown profile2-dropdown"></div>
-			<div class="collapse navbar-collapse navbar-ex1-collapse" id="sidebar-nav">
-				<ul class="nav nav-pills nav-stacked">
-					<li class="nav-header nav-header-first hidden-sm hidden-xs">系统功能</li>
-					<li><a th:href="@{/admin/index.gsp}"><i class="fa fa-th-large"></i><span> 系统首页</span></a></li>
-					<!--/******* 内容管理 *******/-->
-					<li th:class="${current == 'index'}? 'active':(${root == 'content'}? 'active')"><a href="#" class="dropdown-toggle"><i class="fa fa-pencil-square-o"></i> <span> 内容管理</span> <i class="fa fa-angle-right drop-icon"></i></a>
-						<ul class="submenu">
-							<li th:class="${current == 'info'}? 'active'"><a th:href="@{/admin/m/base/info/list.gsp}"> 文章管理</a></li>
-							<li th:class="${current == 'special'}? 'active'"><a th:href="@{/admin/m/base/special/list.gsp}"> 专题管理</a></li>
-							<!-- <li th:class="${current == 'comment'}? 'active'"><a th:href="@{/admin/m/base/comment/list.gsp}"> 评论管理</a></li> -->
-							<li th:class="${current == 'guestbook'}? 'active'"><a th:href="@{/admin/m/ext/guestbook/list.gsp}"> 留言管理</a></li>
-							<li th:class="${current == 'tag'}? 'active'"><a th:href="@{/admin/m/base/tag/list.gsp}"> TAG管理</a></li>
-							<li th:class="${current == 'friendlink'}? 'active'"><a th:href="@{/admin/m/ext/friendlink/list.gsp}"> 友情链接</a></li>
-							<li th:class="${current == 'vote'}? 'active'"><a th:href="@{/admin/m/ext/vote/list.gsp}"> 投票管理</a></li>
-							<li th:class="${current == 'ad'}? 'active'"><a th:href="@{/admin/m/ext/ad/list.gsp}"> 广告管理</a></li>
-							<li th:class="${current == 'question'}? 'active'"><a th:href="@{/admin/m/ext/question/list_null.gsp}"> 问卷管理</a></li>
-						</ul></li>
+<div th:fragment="menu(parent,child)" class="layui-side layui-bg-black">
+	<div class="layui-side-scroll">
+		<ul class="layui-nav layui-nav-tree site-demo-nav">
+			<li class="layui-nav-item" style="height: 5px; text-align: center"><a title="糖果cms"> <i class="layui-icon" style="font-size: 16px;"></i>
+			</a></li>
 
-					<!--/******* 素材管理 *******/-->
-					<li th:class="${root == 'material'}? 'active'"><a href="#" class="dropdown-toggle"><i class="fa fa-film"></i> <span> 素材管理</span> <i class="fa fa-angle-right drop-icon"></i></a>
-						<ul class="submenu">
-							<li th:class="${current == 'image'}? 'active'"><a th:href="@{/admin/m/base/image/list.gsp}"> 图片管理</a></li>
-							<li th:class="${current == 'video'}? 'active'"><a th:href="@{/admin/m/base/video/list.gsp}"> 视频管理</a></li>
-							<!-- <li th:class="${current == 'doc'}? 'active'"><a th:href="@{/admin/m/base/doc/list.gsp}"> 文档管理</a></li>
-							<li th:class="${current == 'file'}? 'active'"><a th:href="@{/admin/m/base/file/list.gsp}"> 文件管理</a></li> -->
-						</ul></li>
+			<!--/* 系统首页 */-->
+			<li class="layui-nav-item layui-nav-title"><a th:href="@{/admin/index.gsp}">系统首页</a></li>
 
-					<!--/******* 站点管理 *******/-->
-					<li th:class="${root == 'site'}? 'active'"><a href="#" class="dropdown-toggle"><i class="fa fa-sitemap"></i> <span> 站点管理</span> <i class="fa fa-angle-right drop-icon"></i></a>
-						<ul class="submenu">
-							<li th:class="${current == 'node'}? 'active'"><a th:href="@{/admin/m/base/node/list.gsp}"> 栏目管理</a></li>
-							<!-- <li th:class="${current == 'collect'}? 'active'"><a th:href="@{/admin/m/base/collect/list.gsp}"> 采集管理</a></li> -->
-							<li th:class="${current == 'specialType'}? 'active'"><a th:href="@{/admin/m/base/specialType/list.gsp}"> 专题分类</a></li>
-							<li th:class="${current == 'guestbookType'}? 'active'"><a th:href="@{/admin/m/ext/guestbookType/list.gsp}"> 留言板类型</a></li>
-							<li th:class="${current == 'friendlinkType'}? 'active'"><a th:href="@{/admin/m/ext/friendlinkType/list.gsp}"> 友情链接类型</a></li>
-							<li th:class="${current == 'adSlot'}? 'active'"><a th:href="@{/admin/m/ext/adSlot/list.gsp}"> 广告位管理</a></li>
-						</ul></li>
+			<!--/* 内容管理 */-->
+			<li class="layui-nav-item" th:classappend="${child == 'index'}? 'layui-nav-itemed':(${parent == 'content'}? 'layui-nav-itemed')"><a href="javascript:;"> 内容管理</a>
+				<dl class="layui-nav-child">
+					<dd th:classappend="${child=='info'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/info/list.gsp}"> <i class="layui-icon">&#xe609;</i> <cite> 文章管理</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='special'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/special/list.gsp}"> <i class="layui-icon">&#xe628;</i> <cite> 专题管理</cite>
+						</a>
+					</dd>
+					<!-- <dd th:classappend="${child=='comment'} ? 'layui-this'">
+						<a th:href="@{/admin/m/ext/guestbook/list.gsp}"> <i class="layui-icon">&#xe628;</i> <cite> 评论管理</cite>
+						</a>
+					</dd> -->
+					<dd th:classappend="${child=='guestbook'} ? 'layui-this'">
+						<a th:href="@{/admin/m/ext/guestbook/list.gsp}"> <i class="layui-icon">&#xe637;</i> <cite> 留言管理</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='tag'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/tag/list.gsp}"> <i class="layui-icon">&#xe637;</i> <cite> TAG管理</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='friendlink'} ? 'layui-this'">
+						<a th:href="@{/admin/m/ext/friendlink/list.gsp}"> <i class="layui-icon">&#xe637;</i> <cite> 友情链接</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='vote'} ? 'layui-this'">
+						<a th:href="@{/admin/m/ext/vote/list.gsp}"> <i class="layui-icon">&#xe637;</i> <cite> 投票管理</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='ad'} ? 'layui-this'">
+						<a th:href="@{/admin/m/ext/ad/list.gsp}"> <i class="layui-icon">&#xe637;</i> <cite> 广告管理</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='question'} ? 'layui-this'">
+						<a th:href="@{/admin/m/ext/question/list_null.gsp}"> <i class="layui-icon">&#xe637;</i> <cite> 问卷管理</cite>
+						</a>
+					</dd>
+				</dl></li>
 
-					<!--/******* 插件管理 *******/-->
-					<li th:class="${root == 'plug'}? 'active'"><a href="#" class="dropdown-toggle"><i class="fa fa-plug"></i> <span> 插件管理</span> <i class="fa fa-angle-right drop-icon"></i></a>
-						<ul class="submenu">
-							<li th:class="${current == 'resume'}? 'active'"><a th:href="@{/admin/m/plug/resume/list.gsp}"> 招聘管理</a></li>
-						</ul></li>
+			<!--/* 素材管理 */-->
+			<li class="layui-nav-item" th:classappend="${parent == 'material'}? 'layui-nav-itemed'"><a href="javascript:;"> 素材管理</a>
+				<dl class="layui-nav-child">
+					<dd th:classappend="${child=='image'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/image/list.gsp}"> <i class="layui-icon">&#xe63c;</i> <cite> 图片管理</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='video'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/video/list.gsp}"> <i class="layui-icon">&#xe627;</i> <cite> 视频管理</cite>
+						</a>
+					</dd>
+					<!-- <dd th:classappend="${child=='doc'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/doc/list.gsp}"> <i class="layui-icon">&#xe627;</i> <cite> 文档管理</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='file'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/file/list.gsp}"> <i class="layui-icon">&#xe627;</i> <cite> 文件管理</cite>
+						</a>
+					</dd> -->
+				</dl></li>
 
-					<!--/******* 全局配置 *******/-->
-					<li th:class="${root == 'gconfig'}? 'active'"><a href="#" class="dropdown-toggle"><i class="fa fa-cogs"></i> <span> 全局配置</span> <i class="fa fa-angle-right drop-icon"></i></a>
-						<ul class="submenu">
-							<li th:class="${current == 'publishPoint'}? 'active'"><a th:href="@{/admin/m/base/publishPoint/list.gsp}"> 发布点配置</a></li>
-							<li th:class="${current == 'global'}? 'active'"><a th:href="@{/admin/m/base/global/list.gsp}"> 全局参数</a></li>
-							<li th:class="${current == 'template'}? 'active'"><a th:href="@{/admin/m/base/template/list.gsp}"> 模板配置</a></li>
-							<li th:class="${current == 'model'}? 'active'"><a th:href="@{/admin/m/base/model/list.gsp}"> 模型配置</a></li>
-							<li th:class="${current == 'attr'}? 'active'"><a th:href="@{/admin/m/base/attr/list.gsp}"> 文章属性</a></li>
-							<li th:class="${current == 'scoreGroup'}? 'active'"><a th:href="@{/admin/m/ext/scoreGroup/list.gsp}"> 评分组配置</a></li>
-						</ul></li>
+			<!--/*站点管理 */-->
+			<li class="layui-nav-item" th:classappend="${parent == 'site'}? 'layui-nav-itemed'"><a href="javascript:;"> 站点管理</a>
+				<dl class="layui-nav-child">
+					<dd th:classappend="${child=='node'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/node/list.gsp}"> <i class="layui-icon">&#xe641;</i> <cite> 栏目管理</cite>
+						</a>
+					</dd>
+					<!-- <dd th:classappend="${child=='collect'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/collect/list.gsp}"> <i class="layui-icon">&#xe612;</i> <cite> 采集管理 </cite>
+						</a>
+					</dd> -->
+					<dd th:classappend="${child=='specialType'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/specialType/list.gsp}"> <i class="layui-icon">&#xe613;</i><cite> 专题分类</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='guestbookType'} ? 'layui-this'">
+						<a th:href="@{/admin/m/ext/guestbookType/list.gsp}"> <i class="layui-icon">&#xe613;</i><cite> 留言板类型 </cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='friendlinkType'} ? 'layui-this'">
+						<a th:href="@{/admin/m/ext/friendlinkType/list.gsp}"> <i class="layui-icon">&#xe613;</i><cite> 友情链接类型 </cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='adSlot'} ? 'layui-this'">
+						<a th:href="@{/admin/m/ext/adSlot/list.gsp}"> <i class="layui-icon">&#xe613;</i><cite> 广告位管理 </cite>
+						</a>
+					</dd>
+				</dl></li>
 
-					<!--/******* 公共部分↓ *******/-->
-					<li th:class="${root == 'uum'}? 'active'"><a href="#" class="dropdown-toggle"><i class="fa fa-user"></i> <span> 用户权限</span> <i class="fa fa-angle-right drop-icon"></i></a>
-						<ul class="submenu">
-							<li th:class="${current == 'user'}? 'active'"><a th:href="@{/admin/c/user/list.gsp}"> 用户管理</a></li>
-						</ul></li>
-					<li th:class="${root == 'monitor'}? 'active'"><a href="#" class="dropdown-toggle"><i class="fa fa-binoculars"></i> <span> 系统监控</span> <i class="fa fa-angle-right drop-icon"></i></a>
-						<ul class="submenu">
-							<li th:class="${current == 'logLoginList'}? 'active'"><a th:href="@{/admin/c/monitor/log/listLogin.gsp}"> 登录日志</a></li>
-							<li th:class="${current == 'logOperateList'}? 'active'"><a th:href="@{/admin/c/monitor/log/listOperate.gsp}"> 操作日志</a></li>
-							<li th:class="${current == 'sysinfo'}? 'active'"><a th:href="@{/admin/c/monitor/sysinfo/list.gsp}"> 系统信息</a></li>
-						</ul></li>
-					<li th:class="${current == 'about'}? 'active'"><a th:href="@{/admin/c/index/about.gsp}"><i class="fa fa-info-circle"></i><span> 关于系统</span></a></li>
-				</ul>
-			</div>
-		</div>
-	</section>
-	<div id="nav-col-submenu"></div>
+			<!--/* 插件管理 */-->
+			<li class="layui-nav-item" th:classappend="${parent == 'custom'}? 'layui-nav-itemed'"><a href="javascript:;">插件管理</a>
+				<dl class="layui-nav-child">
+					<dd th:classappend="${child=='resume'} ? 'layui-this'">
+						<a th:href="@{/admin/m/plug/resume/list.gsp}"> <i class="layui-icon">&#xe600;</i> <cite> 招聘管理</cite>
+						</a>
+					</dd>
+				</dl></li>
+
+			<!--/* 全局配置 */-->
+			<li class="layui-nav-item" th:classappend="${parent=='gconfig'} ? 'layui-nav-itemed'"><a href="javascript:;"> 全局配置</a>
+				<dl class="layui-nav-child">
+					<dd th:classappend="${child=='publishPoint'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/publishPoint/list.gsp}"> <i class="layui-icon">&#xe638;</i> <cite> 发布点配置 </cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='global'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/global/list.gsp}"> <i class="layui-icon">&#xe631;</i> <cite> 全局参数</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='template'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/template/list.gsp}"> <i class="layui-icon">&#xe631;</i> <cite> 模板配置</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='model'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/model/list.gsp}"> <i class="layui-icon">&#xe631;</i> <cite> 模型配置 </cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='attr'} ? 'layui-this'">
+						<a th:href="@{/admin/m/base/attr/list.gsp}"> <i class="layui-icon">&#xe631;</i> <cite> 文章属性 </cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='scoreGroup'} ? 'layui-this'">
+						<a th:href="@{/admin/m/ext/scoreGroup/list.gsp}"> <i class="layui-icon">&#xe631;</i> <cite> 评分组配置</cite>
+						</a>
+					</dd>
+				</dl></li>
+
+			<!--/* 公共部分  */-->
+			<li class="layui-nav-item" th:classappend="${parent=='uum'} ? 'layui-nav-itemed'"><a href="javascript:;"> 用户权限</a>
+				<dl class="layui-nav-child">
+					<dd th:classappend="${child=='user'} ? 'layui-this'">
+						<a th:href="@{/admin/c/user/list.gsp}"> <i class="layui-icon">&#xe605;</i> <cite> 用户管理</cite>
+						</a>
+					</dd>
+				</dl></li>
+			<li class="layui-nav-item" th:classappend="${parent=='monitor'} ? 'layui-nav-itemed'"><a href="javascript:;"> 系统监控</a>
+				<dl class="layui-nav-child">
+					<dd th:classappend="${child=='logLoginList'} ? 'layui-this'">
+						<a th:href="@{/admin/c/monitor/log/listLogin.gsp}"> <i class="layui-icon">&#xe605;</i> <cite> 登录日志</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='logOperateList'} ? 'layui-this'">
+						<a th:href="@{/admin/c/monitor/log/listOperate.gsp}"> <i class="layui-icon">&#xe605;</i> <cite> 操作日志</cite>
+						</a>
+					</dd>
+					<dd th:classappend="${child=='sysinfo'} ? 'layui-this'">
+						<a th:href="@{/admin/c/monitor/sysinfo/list.gsp}"> <i class="layui-icon">&#xe605;</i> <cite> 系统信息</cite>
+						</a>
+					</dd>
+				</dl></li>
+			<li class="layui-nav-item" th:classappend="${child=='about'} ? 'layui-nav-itemed'"><a th:href="@{/admin/c/index/about.gsp}"> 关于系统</a></li>
+		</ul>
+	</div>
 </div>
