--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/index.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/index.html
@@ -1,43 +1,32 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title th:text="|#{customer.systemTitle}-首页|">图灵谷</title>
+<title th:text="|#{customer.systemTitle}-管理中心-首页|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
-<!--/* 当前页css */-->
+<style type="text/css">
+.site-doc-color li {
+	display: inline-block;
+	vertical-align: middle;
+	width: 180px;
+	margin-left: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	padding: 20px 10px;
+	color: #fff;
+	text-align: center;
+	border-radius: 2px;
+	line-height: 22px;
+	font-size: 18px;
+}
+</style>
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=index,current=index)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=管理中心,current=首页)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<h2>系统信息</h2>
-					</header>
-					<div class="main-box-body clearfix">
-						<table class="table table-striped table-hover">
-							<thead>
-								<tr>
-									<th>#</th>
-									<th>参数名称</th>
-									<th>参数值</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr th:each="resultItem,itemStat : ${resultList}" class="gradeX">
-									<td th:text="${itemStat.index+1}">1</td>
-									<td th:text="${resultItem.name}">name</td>
-									<td th:text="${resultItem.value}">value</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
-			</div>
-		</div>
+		<div th:replace="fragments/menu_admin::menu(parent=index,child=index)">菜单栏</div>
+		<!--/*******内容*******/-->
+		<div class="layui-body"></div>
+		<div th:replace="fragments/footer_admin">底部版权信息等</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
