常规维护 暂时不要更新

--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/about.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/about.html
@@ -66,9 +66,32 @@
 				<legend> 版本 </legend>
 			</fieldset>
 			<blockquote class="layui-elem-quote layui-quote-nm">
-				<p>发布时间：2016-07-15 版本号：2.1 代号：橡皮糖（糖果还未成形，架构变动较大，就叫橡皮糖吧）</p>
-				<p>发布时间：2016-01-21 版本号：1.1 代号：麦芽糖（糖果还未成形，架构变动较大，就叫麦芽糖吧）</p>
-				<p>发布时间：2015-10-26 版本号：0.9 代号：棉花糖（糖果还未成形，就叫她棉花糖吧）</p>
+				<table class="layui-table">
+					<thead>
+						<tr>
+							<th><strong>发布时间</strong></th>
+							<th><strong>版本</strong></th>
+							<th><strong>代号</strong></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>2016-07-15</td>
+							<td>V2.1</td>
+							<td>橡皮糖（糖果还未成形，架构变动较大，就叫橡皮糖吧）</td>
+						</tr>
+						<tr>
+							<td>2016-01-21</td>
+							<td>V1.1</td>
+							<td>麦芽糖（糖果还未成形，架构变动较大，就叫麦芽糖吧）</td>
+						</tr>
+						<tr>
+							<td>2015-10-26</td>
+							<td>V0.9</td>
+							<td>棉花糖（糖果还未成形，就叫她棉花糖吧）</td>
+						</tr>
+					</tbody>
+				</table>
 			</blockquote>
 			<br />
 			<fieldset class="layui-elem-field layui-field-title site-title">
