--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/menu_admin.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/menu_admin.html
@@ -160,7 +160,7 @@
 						</a>
 					</dd>
 				</dl></li>
-			<li class="layui-nav-item" th:classappend="${child=='about'} ? 'layui-nav-itemed'"><a th:href="@{/admin/c/index/about.gsp}"> 关于系统</a></li>
+			<li class="layui-nav-item" th:classappend="${parent=='about'} ? 'layui-nav-itemed'"><a th:href="@{/admin/c/index/about.gsp}"> 关于系统</a></li>
 		</ul>
 	</div>
 </div>
