--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/logLoginList.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/logLoginList.html
@@ -3,124 +3,127 @@
 <head>
 <title th:text="|#{customer.systemTitle}-统计分析-登录日志|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
-<!--/***** 当前页css  start *****/-->
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<link th:href="@{/resources/vendor/tgCube/css/libs/datepicker.css}" rel="stylesheet" />
-<!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=monitor,current=logLoginList)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=系统监控,current=登录日志)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<div class="row m-b-sm m-t-sm">
-							<div class="col-xs-4">
-								<div class="input-daterange input-group" id="datepicker-range">
-									<input id="startTime" name="startTime" th:value="${#dates.format(#dates.createToday(), 'yyyy-MM-dd')}" type="text" class="form-control" /> <span class="input-group-addon">到</span> <input id="endTime" name="endTime" th:value="${#dates.format(#dates.createToday(), 'yyyy-MM-dd')}" type="text"
-										class="form-control" />
-								</div>
-							</div>
-							<div class="col-xs-4 col-xs-offset-4">
-								<div class="input-group">
-									<input id="simpleQueryParam" name="simpleQueryParam" type="text" placeholder="请输入关键字搜索" class="form-control" /> <span class="input-group-btn">
-										<button onclick="myTable.filter()" type="button" class="btn btn-primary">搜索</button>
-									</span>
-								</div>
-							</div>
-						</div>
-					</header>
-					<div class="main-box-body clearfix">
-						<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover ">
-							<thead>
-								<tr>
-									<th width="60px" class="text-center">序号</th>
-									<th width="120px" class="text-center">操作类型</th>
-									<th width="120px" class="text-center">用户</th>
-									<th width="120px" class="text-center">ip</th>
-									<th class="text-center">操作信息</th>
-									<th width="150px" class="text-center">操作时间</th>
-								</tr>
-							</thead>
-						</table>
-					</div>
+		<div th:replace="fragments/menu_admin::menu(parent=monitor,child=logLoginList)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>系统监控</cite></a> <a><cite>登录日志</cite></a>
+					</span>
 				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 系统的登录日志
+				</blockquote>
+				<!--/*******操作*******/-->
+				<form th:action="@{/admin/c/monitor/log/listLogin.gsp}" method="get">
+					<div class="layui-form-item">
+						<blockquote class="layui-elem-quote layui-quote-nm">
+							<div class="layui-inline">
+								<div class="layui-input-inline" style="width: 120px;">
+									<input id="startTime" name="startTime" lay-verify="date" placeholder="开始时间" autocomplete="off" class="layui-input" type="text">
+								</div>
+								<div class="layui-form-mid">-</div>
+								<div class="layui-input-inline" style="width: 120px;">
+									<input id="endTime" name="endTime" lay-verify="date" placeholder="结束时间" autocomplete="off" class="layui-input" type="text">
+								</div>
+							</div>
+							<div class="layui-inline">
+								<div class="layui-input-inline" style="width: 200px;">
+									<input type="search" id="simpleQueryParam" name="simpleQueryParam" placeholder="关键字" autocomplete="off" class="layui-input">
+								</div>
+								<button class="layui-btn" lay-submit="" lay-filter="searchForm">
+									<i class="layui-icon">&#xe615;</i>
+								</button>
+							</div>
+						</blockquote>
+					</div>
+				</form>
+				<table cellspacing="0" width="100%" class="layui-table" lay-even="" lay-skin="row">
+					<thead>
+						<tr>
+							<th width="40px">#</th>
+							<th width="120px">操作类型</th>
+							<th width="120px">用户</th>
+							<th width="120px">ip</th>
+							<th>操作信息</th>
+							<th width="150px">操作时间</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${loginList.records == null or loginList.records.size() == 0}">
+							<td colspan="6" style="text-align: center;">暂时没有数据</td>
+						</tr>
+						<tr th:each="login,itemStat:${loginList.records}">
+							<td th:text="${loginList.pageSize*(loginList.page-1)+itemStat.index+1}" style="text-align: center;"></td>
+							<td th:text="${login.logType}" style="text-align: center;"></td>
+							<td th:text="${login.username}" style="text-align: center;"></td>
+							<td th:text="${login.ipAddress}" style="text-align: center;"></td>
+							<td th:text="${login.message}"></td>
+							<td th:text="${login.eventDate}==null?'':${#dates.format(login.eventDate,'yyyy-MM-dd HH:mm:ss')}" style="text-align: center;"></td>
+						</tr>
+					</tbody>
+				</table>
+				<div id="pageDiv" style="float: center;"></div>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
-<!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<script th:src="@{/resources/vendor/bootstrap/plugins/bootstrap-datepicker.js}"></script>
-<!--/***** 当前页js end *****/-->
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //表格
-    var myTable;
-    //表格列定义
-    var columnDefs = [ {
-        //第一列，用来显示序号
-        "searchable" : false,
-        "orderable" : false,
-        "targets" : 0
-    } ];
-    var columns = [ {
-        //第一列，用来显示序号
-        "data" : null,
-        "class" : "text-center"
-    }, {
-        "data" : "logType",
-        "class" : "text-center"
-    }, {
-        "data" : "username"
-    }, {
-        "data" : "ipAddress",
-        "class" : "text-center"
-    }, {
-        "data" : "message"
-    }, {
-        "data" : "eventDate",
-        "class" : "text-center"
-    } ];
-    //ajax参数
-    var ajaxDataParamFun = function(d) {
-        d.simpleQueryParam = $('#simpleQueryParam').val(); //模糊查询
-        d.startTime = $('#startTime').val() ? $('#startTime').val() + ' 00:00:00' : ''; //开始时间
-        d.endTime = $('#endTime').val() ? $('#endTime').val() + ' 23:59:59' : ''; //开始时间
-    };
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/c/monitor/log/listLogin.gsp}]]*/'url',
-        columnDefs : columnDefs, //表格列定义
-        columns : columns, //表格列
-        dataTableDiv : 'dataTable', //表格
-        ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-        pageable : true, //是否分页
-        showIndexColumn : true
-    //是否显示第一列的索引列
-    };
-    //创建表格
-    myTable = new TG_Tabel.createNew(setting);
-    //加载完成后执行
-    $(function() {
-        //表格初始化
-        myTable.init();
-        //日期范围
-        $('#datepicker-range').datepicker({
-            format : 'yyyy-mm-dd',
-            keyboardNavigation : false,
-            forceParse : false,
-            autoclose : true
-        });
+ var result = /*[[${loginList}]]*/;
+    $(function(){
+        $("#simpleQueryParam").val(GetQueryString("simpleQueryParam"));
+        $("#startTime").val(GetQueryString("startTime"));
+        $("#endTime").val(GetQueryString("endTime"));
+        var option = {
+            listUrl : /*[[@{/admin/c/monitor/log/listLogin.gsp?}]]*/,
+            totalPages : result.totalPages,
+            page : result.page,
+            param : {
+                simpleQueryParam,
+                startTime,
+                endTime
+            }
+        };
+        tg_basePage(option);
+    })
+    
+        layui.use('laydate', function() {
+        var laydate = layui.laydate;
+
+        var start = {
+            min : '',
+            max : '2099-06-16 23:59:59',
+            istoday : false,
+            choose : function(datas) {
+                end.min = datas; //开始日选好后，重置结束日的最小日期
+                end.start = datas //将结束日的初始值设定为开始日
+            }
+        };
+
+        var end = {
+            min : '',
+            max : '2099-06-16 23:59:59',
+            istoday : false,
+            choose : function(datas) {
+                start.max = datas; //结束日选好后，重置开始日的最大日期
+            }
+        };
+
+        document.getElementById('startTime').onclick = function() {
+            start.elem = this;
+            laydate(start);
+        }
+        document.getElementById('endTime').onclick = function() {
+            end.elem = this
+            laydate(end);
+        }
     });
     /*]]>*/
 </script>
