--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/sysinfoMonitorList.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/sysinfoMonitorList.html
@@ -5,39 +5,39 @@
 <div th:replace="fragments/head_admin">head</div>
 <!--/* 当前页css */-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=monitor,current=sysinfo)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=系统监控,current=系统信息)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<h2>系统信息</h2>
-					</header>
-					<div class="main-box-body clearfix">
-						<table class="table table-striped table-hover">
-							<thead>
-								<tr>
-									<th>#</th>
-									<th>参数名称</th>
-									<th>参数值</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr th:each="resultItem,itemStat : ${resultList}" class="gradeX">
-									<td th:text="${itemStat.index+1}">1</td>
-									<td th:text="${resultItem.name}">name</td>
-									<td th:text="${resultItem.value}">value</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
+		<div th:replace="fragments/menu_admin::menu(parent=monitor,child=sysinfo)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>系统监控</cite></a> <a><cite>系统信息</cite></a>
+					</span>
 				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 系统信息
+				</blockquote>
+				<table class="layui-table" lay-even="" lay-skin="row">
+					<thead>
+						<tr>
+							<th>#</th>
+							<th>参数名称</th>
+							<th>参数值</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="resultItem,itemStat : ${resultList}" class="gradeX">
+							<td th:text="${itemStat.index+1}" style="text-align: center;">1</td>
+							<td th:text="${resultItem.name}">name</td>
+							<td th:text="${resultItem.value}">value</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
