--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/core/uum/user/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/core/uum/user/list.html
@@ -3,145 +3,112 @@
 <head>
 <title th:text="|#{customer.systemTitle}-用户权限-组织机构维度|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
-<!--/***** 当前页css  start *****/-->
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
-<!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=uum,current=user)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=统一用户管理,current=用户管理)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<div class="row m-b-sm m-t-sm">
-							<a th:href="@{/admin/c/user/add.gsp}" data-target="#commonWin" class="btn btn-primary btn-sm" type="button" data-toggle="modal"><i class="fa fa-plus"></i>&nbsp;新增</a>
-						</div>
-					</header>
-					<div class="main-box-body clearfix">
-						<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover">
-							<thead>
-								<tr>
-									<th width="60" class="text-center">#</th>
-									<th class="text-center">状态</th>
-									<th>用户名</th>
-									<th>真实姓名</th>
-									<th class="text-center">最后登录时间</th>
-									<th class="text-center">最后登录IP</th>
-									<th class="text-center">可否编辑</th>
-									<th width="180" class="text-center">操作</th>
-								</tr>
-							</thead>
-						</table>
-					</div>
+		<div th:replace="fragments/menu_admin::menu(parent=uum,child=user)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>用户权限</cite></a> <a href="#">用户管理</a> <a><cite>列表</cite></a>
+					</span>
 				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 用户管理
+				</blockquote>
+				<blockquote class="layui-elem-quote layui-quote-nm">
+					<div class="layui-inline">
+						<div class="layui-input-inline">
+							<a th:href="@{/admin/c/user/add.gsp}" class="layui-btn">新增</a>
+						</div>
+					</div>
+				</blockquote>
+				<table cellspacing="0" width="100%" class="layui-table" lay-even="" lay-skin="row">
+					<thead>
+						<tr>
+							<th style="width: 40px;">#</th>
+							<th style="width: 60px;">状态</th>
+							<th>用户名</th>
+							<th>真实姓名</th>
+							<th>最后登录时间</th>
+							<th>最后登录IP</th>
+							<th>可否编辑</th>
+							<th style="width: 90px;">操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${userList == null or userList.size() == 0}">
+							<td colspan="8" style="text-align: center;">暂时没有数据</td>
+						</tr>
+						<tr th:each="user,itemStat:${userList}">
+							<td th:text="${itemStat.index+1}" style="text-align: center;"></td>
+							<td class="layui-form"><input th:if="${user.editable==1}" lay-filter="filter" th:id="${user.id}" lay-skin="switch" type="checkbox" th:attr="checked=${user.userEnabled ==1}"><input th:if="${user.editable==2}" type="checkbox" name="close" lay-skin="switch" disabled></td>
+							<td th:text="${user.username}" style="text-align: center;"></td>
+							<td th:text="${user.realname}" style="text-align: center;"></td>
+							<td th:text="${user.lastLoginTime}==null?'':${#dates.format(user.lastLoginTime,'yyyy-MM-dd HH:mm:ss')}" style="text-align: center;"></td>
+							<td th:text="${user.lastLoginIp}" style="text-align: center;"></td>
+							<td style="text-align: center;"><label th:if="${user.editable==1}" style="color: green;">可编辑</label><label th:if="${user.editable==2}" style="color: orange;">不可编辑</label></td>
+							<td><a th:if="${user.editable==2}" class="layui-btn layui-btn-disabled layui-btn-small"> <i class="layui-icon"></i></a> <a th:if="${user.editable==2}" class="layui-btn layui-btn-disabled layui-btn-small"><i class="layui-icon"></i></a> <a th:if="${user.editable==1}"
+								th:href="|@{/admin/c/user/edit_}${user.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon"></i></a> <a th:if="${user.editable==1}" th:onclick="|del('${user.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
-<!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<!--/***** 当前页js end *****/-->
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //表格
-    var myTable;
-    //表格列定义
-    var columnDefs = [];
-    var columns = [ {
-        "data" : "enabled",
-        "class" : "text-center",
-        render : function(data, type, row, meta) {
-            if (row.editable === 1) {
-                if (data === 1) {
-                    return '<input type="checkbox" data-size="mini" data-toggle="toggle" class="js-switch" data-on="启用" data-off="停用" checked="checked" onchange="myTable.changeEnabled(this,' + "\'" + row.id + "\'" + ')" /> ';
-                } else if (data !== 1) {
-                    return '<input type="checkbox" data-size="mini" data-toggle="toggle" class="js-switch" data-on="启用" data-off="停用" onchange="myTable.changeEnabled(this, ' + "\'" + row.id + "\'" + ')" />';
-                }
-            } else {
-                //不可编辑的都是启用的
-                return '<input type="checkbox" data-size="mini" class="js-switch" data-on="启用" data-off="停用" checked="checked" disabled/> ';
-            }
-        }
-    }, {
-        "data" : "username"
-    }, {
-        "data" : "realname"
-    }, {
-        "data" : "lastLoginTime",
-        "class" : "text-center"
-    }, {
-        "data" : "lastLoginIp",
-        "class" : "text-center"
-    }, {
-        "data" : "editable",
-        "class" : "text-center",
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                return '<span class="text-success">可编辑</span>';
-            } else if (data !== 1) {
-                return '<span class="text-danger">不可编辑</span>';
-            }
-        }
-    }, {
-        "data" : null,
-        "class" : "text-center", //最后一列，操作按钮
-        render : function(data, type, row, meta) {
-            var editUrlPath = myTable.editUrl + row.id + ".gsp"; //修改地址
-            var roleUrlPre = /*[[@{/admin/c/user/roleList_{id}.gsp}]]*/'url';
-            var result = '';
-            if (row.editable === 1) {
-                //修改按钮
-                result += '<a href="'+editUrlPath+'" data-target="#commonWin" data-toggle="modal" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>';
-                //删除按钮
-                result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';
-            } else {
-                //修改按钮
-                result += '<a class="btn btn-primary btn-xs disabled"><i class="fa fa-pencil"></i></a>';
-                //删除按钮
-                result += ' <a class="btn btn-danger btn-xs disabled"><i class="fa fa-trash-o"></i></a>';
-            }
-            return result;
-        }
-    } ];
-    //ajax参数
-    var ajaxDataParamFun = function(d) {
-        d.simpleQueryParam = $('#simpleQueryParam').val(); //模糊查询
-    };
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/c/user/list.gsp}]]*/'url',
-        editUrl : /*[[@{/admin/c/user/edit_}]]*/'url',
-        deleteUrl : /*[[@{/admin/c/user/delete_}]]*/'url',
-        enableUrl : /*[[@{/admin/c/user/enable_}]]*/'url',
-        disableUrl : /*[[@{/admin/c/user/disable_}]]*/'url',
-        columnDefs : columnDefs, //表格列定义
-        columns : columns, //表格列
-        dataTableDiv : 'dataTable', //表格
-        ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-        pageable : false, //是否分页
-        showIndexColumn : false, //是否显示第一列的索引列
-        enabledChange : true
-    };
-    //创建表格
-    myTable = new TG_Tabel.createNew(setting);
-    //加载完成后执行
-    $(function() {
-        //表格初始化
-        myTable.init();
-    });
+    var form = layui.form();
+    var enableUrl = /*[[@{/admin/c/user/enable_{id}.gsp}]]*/;
+    var disableUrl = /*[[@{/admin/c/user/disable_{id}.gsp}]]*/;
+    form.on('switch(filter)', function(data){
+        var id = data.elem.id;
+        if(!$("#" + data.elem.id).prop("checked")){  
+            layer.confirm('您确定要停用吗？', {
+                btn: ['确定','取消'] 
+            }, function(){
+             //停用
+             var url = disableUrl.replace("{id}",data.elem.id);
+             $.post(url,{'id':data.elem.id},function(){    
+                 $("#" + data.elem.id).prop("checked", false);
+                 $("#" + data.elem.id).next().removeClass("layui-form-onswitch");
+             });  
+             layer.msg('停用成功！', {icon: 1});
+             setTimeout(function(){window.location.reload();},1000);
+            }, function(){
+                $("#" + data.elem.id).prop("checked", true);
+                $("#" + data.elem.id).next().addClass("layui-form-onswitch");
+            });
+        }else if($("#" + data.elem.id).prop("checked")){   
+            layer.confirm('您确定要启用吗？', {
+                btn: ['确定','取消'] 
+            }, function(){
+          //启用
+          var url = enableUrl.replace("{id}",data.elem.id);
+          $.post(url,{'id':data.elem.id},function(){
+              $("#" + data.elem.id).prop("checked", true);
+              $("#" + data.elem.id).next().addClass("layui-form-onswitch");
+          });
+          layer.msg('启用成功！', {icon: 1});
+          setTimeout(function(){window.location.reload();},1000);
+          }, function(){
+              $("#" + data.elem.id).prop("checked", false);
+              $("#" + data.elem.id).next().removeClass("layui-form-onswitch");
+          });
+        }    
+    });  
+    
+    var deleteUrl = /*[[@{/admin/c/user/delete_{id}.gsp}]]*/;
+    function del(id){
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });       
+    }
     /*]]>*/
 </script>
 </html>
